--- a/egg/zoo/emergent_captioner/finetuning/configs/mle.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/mle.yml
@@ -1,10 +1,11 @@
 DEBUG : True
-INIT_VAL : False
+INIT_VAL : True
 GREEDY_BASELINE : False
 SAVE_BEST_METRIC : False # to save nothing : = False and checkpoint_freq = 0
 ONLY_INFERENCE : False
 ONLY_VAL : False
 
+CIDER_SR : False
 dataset : coco
 captions_type : "mistral" #coco, (mistral, mistral_4), blip_holistic
 train_method : "mle" # (discriminative, cider, mle)
@@ -53,13 +54,13 @@ resume_training :
 opts: 
   baseline : mean
   n_epochs : 10
-  batch_size : 2 #10 for ada
+  batch_size : 16 #10 for ada
   lr :  2e-5
   max_len : 50
   checkpoint_freq : 0
   num_workers : 16
-  dataset_dir : /home/manugaur/coco
-  checkpoint_dir : /home/manugaur/EGG/checkpoints/mistral_4/mle_1cap
+  dataset_dir : /storage/datasets/coco
+  checkpoint_dir : /home/manugaur/trash 
   recv_clip_model : ViT-B/32 # ViT-L/14@336px
 
 WANDB :
