--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_final.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_final.yml
@@ -1,14 +1,14 @@
 DEBUG : True
-INIT_VAL : True
+INIT_VAL : False
 GREEDY_BASELINE : False
-SAVE_BEST_METRIC : False # to save nothing : = False and checkpoint_freq = 0
+SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
 ONLY_INFERENCE : False
 ONLY_VAL : False
 
 CIDER_SR : False
 dataset : coco
-captions_type : "mistral" #coco, (mistral, mistral_4), blip_holistic
-train_method : "mle" # (discriminative, cider, mle)
+captions_type : "coco" #coco, (mistral, mistral_4), blip_holistic
+train_method : "discriminative" # (discriminative, cider, mle)
 prefix_len : 10
 warmup_ratio : 0.034
 official_clipcap_weights : /home/manugaur/official_clipcap/coco_weights.pt
@@ -19,32 +19,25 @@ diff_lr: False
 fp16: False
 
 mllm : "clipcap" # {llava, clipcap}
-reinforce : False
+reinforce : True
 contrastive : False
-#hparams
-lora : False
-lora_rank : 32
-log_spice : False
-
-freeze_wte : False
-freeze_adapter : False
 
 #lora
-lora : False
-finetune_model : llm
+lora : True
+finetune_model : both # {gpt, clip} # automatically freeze gpt.transformer or CLIP
 lora_rank : 32
-clip_mlp_ft : False
+clip_mlp_ft : True
 adapter_lora : False
 adapter_rank : 32
 clip_text : False
 
-neg_mining:
-  curricullum : {10 : ["rand", 5]} # "easy" : 3, "medium": 7, "hard" : 20} #indexed from 1 {"medium" : 3, "hard" : 10}
-  save_optimizer : False
-  bag_size : 5
-  save_using_neg : False #save model i.e best on neg_dataloader 
-  val_bag_size : 5
-  val_level : "rand"
+# freezing layers
+freeze_wte : True
+freeze_adapter : False
+log_spice : False
+
+curri: {1: 0} # {n_epoch : bag_size}
+val_bag_size : 5
 
 resume_training : 
   do : False
@@ -53,14 +46,14 @@ resume_training :
   
 opts: 
   baseline : mean
-  n_epochs : 10
-  batch_size : 16 #10 for ada
-  lr :  2e-5
+  batch_size : 8
+  lr :  9e-8
   max_len : 50
   checkpoint_freq : 0
   num_workers : 16
   dataset_dir : /storage/datasets/coco
-  checkpoint_dir : /home/manugaur/trash 
+  mle_model_path : /workspace/manugaur/no-detail-left-behind/checkpoints/coco/mle_coco_repro/best.pt #it loads only sender.clipcap (adapter + llm)
+  checkpoint_dir : /workspace/manugaur/no-detail-left-behind 
   recv_clip_model : ViT-B/32 # ViT-L/14@336px
 
 WANDB :
@@ -70,10 +63,10 @@ WANDB :
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name : "final" #suffix to "sr_{data}_"
+  run_name : "coco_sr_repro"
  
 inference : 
-  batch_size : 100
-  output_dir : /home/manugaur/EGG/inference_preds/
+  batch_size : 8
+  output_dir : /workspace/manugaur/no-detail-left-behind
 
 #DEBUG,INIT_VAL, logging, batch_size
